Update build config (tycho 0.26, neon)
Change-Id: I391f7fd9a606c0eb3f71d272459a9d29a6050729
Signed-off-by: Fred Bricon <fbricon@gmail.com>